# ai_video_clipping

./: .env.example  .gitignore  README.md  pyproject.toml
ai_clipping_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: app.db
frontend/: index.html
frontend/assets/: app.css  app.js
scripts/: dev-common.sh  dev-start.sh  dev-status.sh  dev-stop.sh  test.sh
src/: main.py
src/api/: routes.py  schemas.py
src/core/: command_runner.py  config.py  container.py  database.py  job_cleanup.py  logging.py  models.py  queue.py  repositories.py  timecode.py
src/modules/audio_extractor/: service.py
src/modules/clip_generator/: service.py
src/modules/clip_optimizer/: __init__.py  service.py
src/modules/downloader/: service.py
src/modules/edit_planner/: service.py
src/modules/export_manager/: service.py
src/modules/hook_detector/: __init__.py  service.py
src/modules/moment_refiner/: service.py
src/modules/ollama_runtime/: __init__.py  service.py
src/modules/overlay_compositor/: __init__.py  service.py
src/modules/speaker_tracker/: __init__.py  service.py
src/pipeline/: process_video.py
src/ui/: routes.py
tests/: conftest.py  test_clip_generator.py  test_clip_optimizer.py  test_dashboard_routes.py  test_downloader.py  test_edit_planner.py  test_hook_detector.py  test_moment_refiner.py  test_overlay_compositor.py  test_pipeline.py  test_repository_reconciliation.py  test_subtitle_generator.py  test_thought_completion.py  test_timecode.py  test_transcript_segmenter.py  test_viral_detector.py  test_viral_phrase_classifier.py
(+10 files in other folders)
